# caudio

./: Cargo.toml
src/: audio_queue.rs  error.rs  lib.rs  queue.rs  stream_format.rs
src/format/: audio.rs  mod.rs  sample.rs  stream.rs
src/unit/: buffer.rs  desc.rs  flags.rs  mod.rs  types.rs
